--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,8 @@
     color: #000000;
     letter-spacing: 0.1em;
     position: absolute;
+    display: flex;
 }
-.navbar-nav .nav-item .nav-link:hover {
-    color: rgb(39, 124, 74);
-}
-
-
 /*Header*/
 header.header {
     padding-bottom: 6rem;
@@ -78,7 +74,7 @@ header.header {
 }
 .section-heading {
     font-size: 2.5rem;
-    margin-top: 0;
+    margin-top: -6em;
     margin-bottom: 1rem;
 }
 .section-subheading {
@@ -89,56 +85,62 @@ header.header {
     margin-bottom: 4rem;
 }
 
-/* Téléphonie */
+.imgs {
+    margin-bottom: 1rem;
+    text-align: center;
+    width: 20rem;
+    height: 15rem;
+}
 
-.mobile-text {
+.imgss {
+    width: 20rem;
+    margin-bottom: 5em;
+}
+
+.imgsss{
+    width: 40rem;
+}
+
+/* Exp */
+
+.exp-text {
     text-align: center;
 }
 
-.mobile-heading {
+.exp-heading {
+    font-size: 1.5rem;
+    font-family: "Montserrat", "Segoe UI", Roboto, Arial, sans-serif;
+    font-weight: 700;
+    margin-bottom: 0;
+    margin-top: 2em;
+}
+.exp-subheading {
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 2em;
+}
+
+/* Parcours */
+
+.parc-text {
+    text-align: center;
+}
+
+.parc-heading {
     font-size: 1.5rem;
     font-family: "Montserrat", "Segoe UI", Roboto, Arial, sans-serif;
     font-weight: 700;
     margin-bottom: 0;
 }
-.mobile-subheading {
+.parc-subheading {
     font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-/* Equipe */
-
-.team-text {
-    text-align: center;
-}
-
-.team-heading {
-    font-size: 1.5rem;
-    font-family: "Montserrat", "Segoe UI", Roboto, Arial, sans-serif;
-    font-weight: 700;
-    margin-bottom: 0;
-}
-.team-subheading {
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.member {
+.school {
     margin-bottom: 3rem;
     text-align: center;
 }
-.member img {
+.school img {
     width: 12rem;
     height: 15rem;
-    border: 0.3rem solid #53c41e;
-}
-
-/* À propos */
-
-.about-section img {
-    border-radius: 4%;
-    padding-bottom: 6em;
-}
-
-.about-section {
-    text-align: center;
 }
